# mnemo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODER.md  EXAMPLES.md  FEATURES.md  LICENSE  MANIFEST.in  README.md  config.py  core.py  index.md  log.md  pyproject.toml  requirements.txt  server.py
.claude/: settings.local.json
.github/workflows/: release.yml
.obsidian/: workspace.json
demo/: sample-meeting-notes.md  sample-proposal.md  sample-research.md
memvid/: .sync-manifest.json
mneme/: __init__.py  __main__.py  config.py  core.py  search.py  server.py  ui.html
mneme/profiles/: eu-mdr.json  eu-mdr.md  iso-13485.json  iso-13485.md
mneme/profiles/mappings/: risk-register.json  user-needs.json
mneme/templates/workspace/: .gitignore  AGENTS.md  README.md  index.md  log.md
mneme/templates/workspace/profiles/: README.md
mneme/templates/workspace/schema/: entities.json  graph.json  tags.json
mneme/templates/workspace/wiki/_templates/: page.md
profiles/mappings/: dds.json  requirements.json  test-cases.json
schema/: entities.json  graph.json  tags.json
scripts/: release.ps1  release.sh
sources/demo-retail/: meeting-notes-april.md  risk-assessment-draft.md  risk-register.csv  user-needs.csv
tests/: test_agent_loop.py  test_bug_regressions.py  test_core.py  test_ingest_csv.py  test_profile.py  test_schema_search.py  test_search.py  test_tornado_lint.py  test_trace.py
wiki/: lint-report-2026-04-05.md
wiki/_templates/: client-overview.md  page.md
wiki/demo-retail/: haz-001.md  haz-002.md  haz-003.md  meeting-notes-april.md  risk-assessment-draft.md  sample-meeting-notes.md  sample-proposal.md  sample-research.md  un-001.md  un-002.md  un-003.md  un-004.md  un-005.md
