[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo"
version = "0.3.2"
description = "Mnemosyne - CLI tool that turns documents into a searchable second brain. Ingest once, query forever."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Tashi" },
]
keywords = ["knowledge-management", "second-brain", "cli", "wiki", "memvid", "llm", "qms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "memvid-sdk>=2.0.0",
    "portalocker>=2.0.0",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.23.0"]
all = ["pymupdf>=1.23.0"]

[project.urls]
Homepage = "https://github.com/tolism/mnemo"
Repository = "https://github.com/tolism/mnemo"
Issues = "https://github.com/tolism/mnemo/issues"

[project.scripts]
mnemo = "core:main"

[tool.setuptools]
py-modules = ["core", "config", "server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
